JF 2/14 Final Revision.  All issues fixed