@@ -1,5 +1,6 @@
 package apps;
 
+import java.util.Arrays;
 import java.util.List;
 
 import tables.SearchTable;
@@ -14,11 +15,11 @@ public class Sandbox {
 		SearchTable test1 = new SearchTable("Sports List", List.of("Sport", "Players per team", "Game Length"));
 		test1.put("Lacrosse", List.of("10", "60 minutes"));
 		test1.put("Hockey", List.of("6", "60 minutes"));
-		test1.put("Basketball", List.of("5", "40 minutes"));
+		test1.put("Basketball", List.of("5", "String is 28 characters long"));
 		test1.put("Soccer", List.of("10", "90 minutes"));
-		test1.put("Football", List.of("11", "60 minutes"));
-		test1.put("Baseball", List.of("10", null));
-		test1.put("Softball", List.of("10", "9 Innings"));
+		test1.put("Football", Arrays.asList("10", "60 minutes"));
+		test1.put("Baseball", Arrays.asList("10", null));
+		test1.put("Softball", Arrays.asList("10", null));
 		test1.put("Swimming", List.of("1", "Varies"));
 		
 		
